[gd_scene load_steps=9 format=2]

[ext_resource path="res://Scenes/Levels/CombinationComputer.gd" type="Script" id=1]
[ext_resource path="res://Assets/GFX/PNG/Tiles/tile_537.png" type="Texture" id=2]
[ext_resource path="res://Assets/GFX/PNG/Tiles/tile_519.png" type="Texture" id=3]
[ext_resource path="res://UI/ComputerScreen/ComputerScreen.tscn" type="PackedScene" id=4]
[ext_resource path="res://UI/NumberPad/Light_Theme.tres" type="Theme" id=5]
[ext_resource path="res://Assets/GFX/Interface/Fonts/kenvector_future_thin.ttf" type="DynamicFontData" id=6]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 36.5833, 48.0759 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 6 )

[node name="CombinationComputer" type="Area2D"]
collision_layer = 0
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
rotation = 1.5708
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 37.358, 3.01882 )
shape = SubResource( 1 )

[node name="Light2D" type="Light2D" parent="."]
rotation = 1.5708
texture = ExtResource( 3 )
offset = Vector2( 0, -30 )

[node name="UI" type="CanvasLayer" parent="."]
editor/display_folded = true

[node name="ComputerScreen" parent="UI" instance=ExtResource( 4 )]

[node name="TextLabel" type="Label" parent="." groups=[
"Labels",
]]
margin_left = -53.9426
margin_top = 40.3326
margin_right = 34.0574
margin_bottom = 119.333
rect_min_size = Vector2( 50, 30 )
rect_rotation = -90.0
theme = ExtResource( 5 )
custom_fonts/font = SubResource( 2 )
align = 1
valign = 1
autowrap = true
[connection signal="body_entered" from="." to="." method="_on_CombinationComputer_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_CombinationComputer_body_exited"]
